L3/Z2/calc.py
from ply import lex
import ply.yacc as yacc
import sys
import re
from converter import convert, divide

tokens = (
    'ADD',
    'SUB',
    'MUL',
    'DIV',
    'MOD',
    'POW',
    'LSB',
    'RSB',
    'NUM',
    'NL'
)

states = (
    ('comment', 'exclusive'),
)

rpn = ''
base = 1234577
err = False

t_ignore = ' \t'
t_comment_ignore = ''

t_ADD = r'\+'
t_SUB = r'\-'
t_MUL = r'\*'
t_DIV = r'\/'
t_MOD = r'\%'
t_POW = r'\^'
t_LSB = r'\('
t_RSB = r'\)'
t_NL = r'\n'

def t_NUM(t):
    r'[0-9]+'
    t.value = int(t.value)
    return t

def t_comment(t):
    r'\#'
    t.lexer.begin('comment')

def t_comment_body(t):
    r'.|\\\n'
    pass

def t_comment_end(t):
    r'\n'
    t.lexer.begin('INITIAL')

def t_comment_error(t):
    print("Invalid Comment Token:",t.value[0])
    t.lexer.skip(1)

def t_error(t):
    print("Invalid Token:",t.value[0])
    t.lexer.skip(1)

def math_error(msg):
    print(msg)
    err = True


lexer = lex.lex()

precedence = (
    ('left', 'ADD', 'SUB'),
    ('left', 'MUL', 'DIV', 'MOD'),
    ('right', 'POW'),
    ('nonassoc', 'NEG')
)

def p_input(p):
    '''input : 
        | input line'''
    pass

def p_line(p):
    'line : NL'
    pass

def p_line2(p):
    'line : exp NL'
    global rpn
    global err
    if not err:
        temp = list(rpn)
        for i in range(len(temp)):
            if temp[i] == '#':
                temp[i] = ''
                if i > 0:
                    temp[i-1] = ''
                    j = i-2
                    while temp[j]!=' ' and j>=0:
                        temp[j] = ''
                        j-=1

        rpn = ''.join(temp)  
        print(rpn)
        print('Wynik: ',p[1])
    print()
    rpn = ''
    err = False

def p_num(p):
    'exp : NUM'
    p[0] = convert(p[1], base)
    global rpn 
    rpn += str(p[0]) + " "

def p_add(p):
    'exp : exp ADD exp'
    p[0] = convert(p[1] + p[3], base)
    global rpn 
    rpn += "+ "

def p_sub(p):
    'exp : exp SUB exp'
    p[0] = convert(p[1] - p[3], base)
    global rpn 
    rpn += "- "

def p_usub(p):
    'exp : SUB exp %prec NEG'
    p[0] = convert(-p[2], base)
    global rpn 
    rpn += "#" + str(convert(-p[2], base)) + " "

def p_mul(p):
    'exp : exp MUL exp'
    p[0] = convert(p[1] * p[3], base)
    global rpn 
    rpn += "* "

def p_div(p):
    'exp : exp DIV exp'
    global err
    if p[3] == 0:
        err = 1
        math_error('Found division by 0.')
        return

    p[0] = convert(divide(p[1], p[3], base), base)
    global rpn 
    rpn += "/ "

def p_brackets(p):
    'exp : LSB exp RSB'
    p[0] = convert(p[2], base)

def p_pow(p):
    'exp : exp POW exp'
    p[0] = convert(p[1]**p[3], base)
    global rpn 
    rpn += "^ "

def p_mod(p):
    'exp : exp MOD exp'
    global err
    if p[3] == 0:
        err = 1
        math_error('Found modulo by 0.')
        return

    _, p[0], _ = convert(p[1]%p[3], base)
    global rpn 
    rpn += "% "

def p_error(p):
    print("Syntax error in input!")

parser = yacc.yacc()

inp = ''
for line in sys.stdin:
    inp += line

res = parser.parse(inp)
